// Licensed to Elasticsearch B.V. under one or more contributor
// license agreements. See the NOTICE file distributed with
// this work for additional information regarding copyright
// ownership. Elasticsearch B.V. licenses this file to you under
// the Apache License, Version 2.0 (the "License"); you may
// not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing,
// software distributed under the License is distributed on an
// "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
// KIND, either express or implied.  See the License for the
// specific language governing permissions and limitations
// under the License.

syntax = "proto3";

package elastic.apm.v1;

option go_package = "github.com/elastic/apm-data/model/modelpb";

message Metricset {
  string name = 1;
  string interval = 2;
  repeated MetricsetSample samples = 3;
  uint64 doc_count = 4;
}

enum MetricType {
  METRIC_TYPE_UNSPECIFIED = 0;
  METRIC_TYPE_GAUGE = 1;
  METRIC_TYPE_COUNTER = 2;
  METRIC_TYPE_HISTOGRAM = 3;
  METRIC_TYPE_SUMMARY = 4;
}

message MetricsetSample {
  MetricType type = 1;
  string name = 2;
  string unit = 3;
  Histogram histogram = 4;
  SummaryMetric summary = 5;
  double value = 6;
}

message Histogram {
  repeated double values = 1;
  repeated uint64 counts = 2;
}

message SummaryMetric {
  uint64 count = 1;
  double sum = 2;
}

message AggregatedDuration {
  uint64 count = 1;

  // nanoseconds
  uint64 sum = 2;
}
